--- a/index.html
+++ b/index.html
@@ -835,7 +835,501 @@
 意在此：老爷明日坐堂，只管虚张声势，动文书发签拿人。原凶自然是拿不来的，
 原告固是定要将薛家族中及奴仆人等拿几个来拷问。小的在暗中调停，令他们报个
 暴病身亡，令族中及地方上共递一张保呈，老爷只说善能扶鸾请仙，堂上设下乩坛
-
+，令军民人等只管来看。老爷就说：‘乩仙批了，死者冯渊与薛蟠原因夙孽相逢，
+今狭路既遇，原应了结。薛蟠今已得了无名之病，被冯魂追索已死。其祸皆因拐子
+某人而起，拐之人原系某乡某姓人氏，按法处治，余不略及’等语。小人暗中嘱托
+拐子，令其实招。众人见乩仙批语与拐子相符，余者自然也都不虚了。薛家有的是
+钱，老爷断一千也可，五百也可，与冯家作烧埋之费。那冯家也无甚要紧的人，不
+过为的是钱，见有了这个银子，想来也就无话了。老爷细想此计如何？”雨村笑道
+：“不妥，不妥。等我再斟酌斟酌，或可压服口声。”二人计议，天色已晚，别无
+话说。
+至次日坐堂，勾取一应有名人犯，雨村详加审问，果见冯家人口稀疏，不过赖此欲
+多得些烧埋之费，薛家仗势倚情，偏不相让，故致颠倒未决。雨村便徇情枉法，胡
+乱判断了此案。冯家得了许多烧埋银子，也就无甚话说了。雨村断了此案，急忙作
+书信二封，与贾政并京营节度使王子腾，不过说“令甥之事已完，不必过虑”等语
+。此事皆由葫芦庙内之沙弥新门子所出，雨村又恐他对人说出当日贫贱时的事来，
+因此心中大不乐业，后来到底寻了个不是，远远的充发了他才罢。
+当下言不着雨村。且说那买了英莲打死冯渊的薛公子，亦系金陵人氏，本是书香继
+世之家。只是如今这薛公子幼年丧父，寡母又怜他是个独根孤种，未免溺爱纵容，
+遂至老大无成，且家中有百万之富，现领着内帑钱粮，采办杂料。这薛公子学名薛
+蟠，表字文起，五岁上就性情奢侈，言语傲慢。虽也上过学，不过略识几字，终日
+惟有斗鸡走马，游山玩水而已。虽是皇商，一应经济世事，全然不知，不过赖祖父
+之旧情分，户部挂虚名，支领钱粮，其余事体，自有伙计老家人等措办。寡母王氏
+乃现任京营节度使王子腾之妹，与荣国府贾政的夫人王氏，是一母所生的姊妹，今
+年方四十上下年纪，只有薛蟠一子。还有一女，比薛蟠小两岁，乳名宝钗，生得肌
+骨莹润，举止娴雅。当日有他父亲在日，酷爱此女，令其读书识字，较之乃兄竟高
+过十倍。自父亲死后，见哥哥不能依贴母怀，他便不以书字为事，只留心针黹家计
+等事，好为母亲分忧解劳。近因今上崇诗尚礼，征采才能，降不世出之隆恩，除聘
+选妃嫔外，凡仕宦名家之女，皆亲名达部，以备选为公主郡主入学陪侍，充为才人
+赞善之职。二则自薛蟠父亲死后，各省中所有的买卖承局，总管，伙计人等，见薛
+蟠年轻不谙世事，便趁时拐骗起来，京都中几处生意，渐亦消耗。薛蟠素闻得都中
+乃第一繁华之地，正思一游，便趁此机会，一为送妹待选，二为望亲，三因亲自入
+部销算旧帐，再计新支，----其实则为游览上国风光之意。因此早已打点下行装细
+软，以及馈送亲友各色土物人情等类，正择日一定起身，不想偏遇见了拐子重卖英
+莲。薛蟠见英莲生得不俗，立意买他，又遇冯家来夺人，因恃强喝令手下豪奴将冯
+渊打死。他便将家中事务一一的嘱托了族中人并几个老家人，他便带了母妹竟自起
+身长行去了。人命官司一事，他竟视为儿戏，自为花上几个臭钱，没有不了的。
+在路不记其日。那日已将入都时，却又闻得母舅王子腾升了九省统制，奉旨出都查
+边。薛蟠心中暗喜道：“我正愁进京去有个嫡亲的母舅管辖着，不能任意挥霍挥霍
+，偏如今又升出去了，可知天从人愿。”因和母亲商议道：“咱们京中虽有几处房
+舍，只是这十来年没人进京居住，那看守的人未免偷着租赁与人，须得先着几个人
+去打扫收拾才好。”他母亲道：“何必如此招摇！咱们这一进京，原该先拜望亲友
+，或是在你舅舅家，或是你姨爹家。他两家的房舍极是便宜的，咱们先能着住下，
+再慢慢的着人去收拾，岂不消停些。”薛蟠道：“如今舅舅正升了外省去，家里自
+然忙乱起身，咱们这工夫一窝一拖的奔了去，岂不没眼色。”他母亲道：“你舅舅
+家虽升了去，还有你姨爹家。况这几年来，你舅舅姨娘两处，每每带信捎书，接咱
+们来。如今既来了，你舅舅虽忙着起身，你贾家姨娘未必不苦留我们。咱们且忙忙
+收拾房屋，岂不使人见怪？你的意思我却知道，守着舅舅姨爹住着，未免拘紧了你
+，不如你各自住着，好任意施为。你既如此，你自去挑所宅子去住，我和你姨娘，
+姊妹们别了这几年，却要厮守几日，我带了你妹子投你姨娘家去，你道好不好？”
+薛蟠见母亲如此说，情知扭不过的，只得吩咐人夫一路奔荣国府来。
+那时王夫人已知薛蟠官司一事，亏贾雨村维持了结，才放了心。又见哥哥升了边缺
+，正愁又少了娘家的亲戚来往，略加寂寞。过了几日，忽家人传报：“姨太太带了
+哥儿姐儿，合家进京，正在门外下车。”喜的王夫人忙带了女媳人等，接出大厅，
+将薛姨妈等接了进去。姊妹们暮年相会，自不必说悲喜交集，泣笑叙阔一番。忙又
+引了拜见贾母，将人情土物各种酬献了。合家俱厮见过，忙又治席接风。
+薛蟠已拜见过贾政，贾琏又引着拜见了贾赦，贾珍等。贾政便使人上来对王夫人说
+：“姨太太已有了春秋，外甥年轻不知世路，在外住着恐有人生事。咱们东北角上
+梨香院一所十来间房，白空闲着，打扫了，请姨太太和姐儿哥儿住了甚好。”王夫
+人未及留，贾母也就遣人来说：“请姨太太就在这里住下，大家亲密些”等语。薛
+姨妈正要同居一处，方可拘紧些儿子，若另住在外，又恐他纵性惹祸，遂忙道谢应
+允。又私与王夫人说明：“一应日费供给一概免却，方是处常之法。”王夫人知他
+家不难于此，遂亦从其愿。从此后薛家母子就在梨香院住了。
+原来这梨香院即当日荣公暮年养静之所，小小巧巧，约有十余间房屋，前厅后舍俱
+全。另有一门通街，薛蟠家人就走此门出入。西南有一角门，通一夹道，出夹道便
+是王夫人正房的东边了。每日或饭后，或晚间，薛姨妈便过来，或与贾母闲谈，或
+与王夫人相叙。宝钗日与黛玉迎春姊妹等一处，或看书下棋，或作针黹，倒也十分
+乐业。
+只是薛蟠起初之心，原不欲在贾宅居住者，但恐姨父管约拘禁，料必不自在的，无
+奈母亲执意在此，且宅中又十分殷勤苦留，只得暂且住下，一面使人打扫出自己的
+房屋，再移居过去的。谁知自从在此住了不上一月的光景，贾宅族中凡有的子侄，
+俱已认熟了一半，凡是那些纨绔气习者，莫不喜与他来往，今日会酒，明日观花，
+甚至聚赌嫖娼，渐渐无所不至，引诱的薛蟠比当日更坏了十倍。虽然贾政训子有方
+，治家有法，一则族大人多，照管不到这些；二则现任族长乃是贾珍，彼乃宁府长
+孙，又现袭职，凡族中事，自有他掌管；三则公私冗杂，且素性潇洒，不以俗务为
+要，每公暇之时，不过看书着棋而已，馀事多不介意。况且这梨香院相隔两层房舍
+，又有街门另开，任意可以出入，所以这些子弟们竟可以放意畅怀的，因此遂将移
+居之念渐渐打灭了。
+第五回
+游幻境指迷十二钗 饮仙醪曲演红楼梦
+第四回中既将薛家母子在荣府内寄居等事略已表明，此回则暂不能写矣。
+如今且说林黛玉自在荣府以来，贾母万般怜爱，寝食起居，一如宝玉，迎春，探春
+，惜春三个亲孙女倒且靠后，便是宝玉和黛玉二人之亲密友爱处，亦自较别个不同
+，日则同行同坐，夜则同息同止，真是言和意顺，略无参商。不想如今忽然来了一
+个薛宝钗，年岁虽大不多，然品格端方，容貌丰美，人多谓黛玉所不及。而且宝钗
+行为豁达，随分从时，不比黛玉孤高自许，目无下尘，故比黛玉大得下人之心。便
+是那些小丫头子们，亦多喜与宝钗去顽。因此黛玉心中便有些悒郁不忿之意，宝钗
+却浑然不觉。那宝玉亦在孩提之间，况自天性所禀来的一片愚拙偏僻，视姊妹弟兄
+皆出一意，并无亲疏远近之别。其中因与黛玉同随贾母一处坐卧，故略比别个姊妹
+熟惯些。既熟惯，则更觉亲密；既亲密，则不免一时有求全之毁，不虞之隙。这日
+不知为何，他二人言语有些不合起来，黛玉又气的独在房中垂泪，宝玉又自悔言语
+冒撞，前去俯就，那黛玉方渐渐的回转来。
+因东边宁府中花园内梅花盛开，贾珍之妻尤氏乃治酒，请贾母、邢夫人、王夫人等
+赏花。是日先携了贾蓉之妻，二人来面请。贾母等于早饭后过来，就在会芳园游顽
+，先茶后酒，不过皆是宁荣二府女眷家宴小集，并无别样新文趣事可记。
+一时宝玉倦怠，欲睡中觉，贾母命人好生哄着，歇一回再来。贾蓉之妻秦氏便忙笑
+回道：“我们这里有给宝叔收拾下的屋子，老祖宗放心，只管交与我就是了。”又
+向宝玉的奶娘丫鬟等道：“嬷嬷、姐姐们，请宝叔随我这里来。”贾母素知秦氏是
+个极妥当的人，生的袅娜纤巧，行事又温柔和平，乃重孙媳中第一个得意之人，见
+他去安置宝玉，自是安稳的。
+当下秦氏引了一簇人来至上房内间。宝玉抬头看见一幅画贴在上面，画的人物固好
+，其故事乃是《燃藜图》，也不看系何人所画，心中便有些不快。又有一幅对联，
+写的是：
+世事洞明皆学问，人情练达即文章。及看了这两句，纵然室宇精美，铺陈华丽，亦
+断断不肯在这里了，忙说：“快出去！快出去！”秦氏听了笑道：“这里还不好，
+可往那里去呢？不然往我屋里去吧。”宝玉点头微笑。有一个嬷嬷说道：“那里有
+个叔叔往侄儿房里睡觉的理？”秦氏笑道：“嗳哟哟，不怕他恼。他能多大呢，就
+忌讳这些个！上月你没看见我那个兄弟来了，虽然与宝叔同年，两个人若站在一处
+，只怕那个还高些呢。”宝玉道：“我怎么没见过？你带他来我瞧瞧。”众人笑道
+：“隔着二三十里，往那里带去，见的日子有呢。”说着大家来至秦氏房中。刚至
+房门，便有一股细细的甜香袭人而来。宝玉觉得眼饧骨软，连说“好香！”入房向
+壁上看时，有唐伯虎画的《海棠春睡图》，两边有宋学士秦太虚写的一副对联，其
+联云：
+嫩寒锁梦因春冷，芳气袭人是酒香。案上设着武则天当日镜室中设的宝镜，一边摆
+着飞燕立着舞过的金盘，盘内盛着安禄山掷过伤了太真乳的木瓜。上面设着寿昌公
+主于含章殿下卧的榻，悬的是同昌公主制的联珠帐。宝玉含笑连说：“这里好！”
+秦氏笑道：“我这屋子大约神仙也可以住得了。”说着亲自展开了西子浣过的纱衾
+，移了红娘抱过的鸳枕。于是众奶母伏侍宝玉卧好，款款散了，只留袭人，媚人、
+晴雯、廊檐下看着猫儿狗儿打架。
+那宝玉刚合上眼，便惚惚的睡去，犹似秦氏在前，遂悠悠荡荡，随了秦氏，至一所
+在。但见朱栏白石，绿树清溪，真是人迹希逢，飞尘不到。宝玉在梦中欢喜，想道
+：“这个去处有趣，我就在这里过一生，纵然失了家也愿意，强如天天被父母师傅
+打呢。”正胡思之间，忽听山后有人作歌曰：
+春梦随云散，飞花逐水流，寄言众儿女，何必觅闲愁。宝玉听了是女子的声音。歌
+声未息，早见那边走出一个人来，蹁跹袅娜，端的与人不同。有赋为证：
+方离柳坞，乍出花房。但行处，鸟惊庭树，将到时，
+影度回廊。仙袂乍飘兮，闻麝兰之馥郁，荷衣欲动兮，
+听环佩之铿锵。靥笑春桃兮，云堆翠髻；唇绽樱颗兮，
+榴齿含香。纤腰之楚楚兮，回风舞雪；珠翠之辉辉兮，
+满额鹅黄。出没花间兮，宜嗔宜喜；徘徊池上兮，若飞若扬。
+蛾眉颦笑兮，将言而未语，莲步乍移兮，待止而欲行。
+羡彼之良质兮，冰清玉润；羡彼之华服兮，闪灼文章。
+爱彼之貌容兮，香培玉琢；美彼之态度兮，凤翥龙翔。其素若何，
+春梅绽雪。其洁若何，秋菊被霜。其静若何，松生空谷。
+其艳若何，霞映澄塘。其文若何，龙游曲沼。其神若何，
+月射寒江。应惭西子，实愧王嫱。奇矣哉，生于孰地，
+来自何方，信矣乎，瑶池不二，紫府无双。果何人哉？如斯之美也！
+宝玉见是一个仙姑，喜的忙来作揖问道：“神仙姐姐不知从那里来，如今要往那里
+去？也不知这是何处，望乞携带携带。”那仙姑笑道：“吾居离恨天之上，灌愁海
+之中，乃放春山遣香洞太虚幻境警幻仙姑是也：司人间之风情月债，掌尘世之女怨
+男痴。因近来风流冤孽，缠绵于此处，是以前来访察机会，布散相思。今忽与尔相
+逢，亦非偶然。此离吾境不远，别无他物，仅有自采仙茗一盏，亲酿美酒一瓮，素
+练魔舞歌姬数人，新填《红楼梦》仙曲十二支，试随吾一游否？”宝玉听说，便忘
+了秦氏在何处，竟随了仙姑，至一所在，有石牌横建，上书“太虚幻境”四个大字
+，两边一副对联，乃是：
+假作真时真亦假，无为有处有还无。转过牌坊，便是一座宫门，上面横书四个大字
+，道是：“孽海情天”。又有一副对联，大书云：
+厚地高天，堪叹古今情不尽，
+痴男怨女，可怜风月债难偿。
+宝玉看了，心下自思道：“原来如此。但不知何为‘古今之情’，何为‘风月之债
+’？从今倒要领略领略。”宝玉只顾如此一想，不料早把些邪魔招入膏肓了。当下
+随了仙姑进入二层门内，至两边配殿，皆有匾额对联，一时看不尽许多，惟见有几
+处写的是：“痴情司”，“结怨司”，“朝啼司”，“夜怨司”，“春感司”，“
+秋悲司”。看了，因向仙姑道：“敢烦仙姑引我到那各司中游玩游玩，不知可使得
+？”仙姑道：“此各司中皆贮的是普天之下所有的女子过去未来的簿册，尔凡眼尘
+躯，未便先知的。”宝玉听了，那里肯依，复央之再四。仙姑无奈，说：“也罢，
+就在此司内略随喜随喜罢了。”宝玉喜不自胜，抬头看这司的匾上，乃是“薄命司
+”三字，两边对联写的是：
+春恨秋悲皆自惹，花容月貌为谁妍。
+宝玉看了，便知感叹。进入门来，只见有十数个大厨，皆用封条封着。看那封条上
+，皆是各省的地名。宝玉一心只拣自己的家乡封条看，遂无心看别省的了。只见那
+边厨上封条上大书七字云：“金陵十二钗正册”。宝玉问道：“何为‘金陵十二钗
+正册’？”警幻道：“即贵省中十二冠首女子之册，故为‘正册’。”宝玉道：“
+常听人说，金陵极大，怎么只十二个女子？如今单我家里，上上下下，就有几百女
+孩子呢。”警幻冷笑道：“贵省女子固多，不过择其紧要者录之。下边二厨则又次
+之。余者庸常之辈，则无册可录矣。”宝玉听说，再看下首二厨上，果然写着“金
+陵十二钗副册”，又一个写着“金陵十二钗又副册”。宝玉便伸手先将“又副册”
+厨开了，拿出一本册来，揭开一看，只见这首页上画着一幅画，又非人物，也无山
+水，不过是水墨滃染的满纸乌云浊雾而已。后有几行字迹，写的是：
+霁月难逢，彩云易散。心比天高，身为下贱。风流灵巧招人怨。寿夭多因毁谤生，
+多情公子空牵念。
+宝玉看了，又见后面画着一簇鲜花，一床破席，也有几句言词，写道是：
+枉自温柔和顺，空云似桂如兰，堪羡优伶有福，谁知公子无缘。
+宝玉看了不解。遂掷下这个，又去开了副册厨门，拿起一本册来，揭开看时，只见
+画着一株桂花，下面有一池沼，其中水涸泥干，莲枯藕败，后面书云：
+根并荷花一茎香，平生遭际实堪伤。
+自从两地生孤木，致使香魂返故乡。宝玉看了仍不解。便又掷了，再去取“正册”
+看，只见头一页上便画着两株枯木，木上悬着一围玉带，又有一堆雪，雪下一股金
+簪。也有四句言词，道是：
+可叹停机德，堪怜咏絮才。
+玉带林中挂，金簪雪里埋。宝玉看了仍不解。待要问时，情知他必不肯泄漏，待要
+丢下，又不舍。遂又往后看时，只见画着一张弓，弓上挂着香橼。也有一首歌词云
+：
+二十年来辨是非，榴花开处照宫闱。
+三春争及初春景，虎兕相逢大梦归。后面又画着两人放风筝，一片大海，一只大船
+，船中有一女子掩面泣涕之状。也有四句写云：
+才自精明志自高，生于末世运偏消。
+清明涕送江边望，千里东风一梦遥。后面又画几缕飞云，一湾逝水。其词曰：
+富贵又何为，襁褓之间父母违。
+展眼吊斜晖，湘江水逝楚云飞。后面又画着一块美玉，落在泥垢之中。其断语云：
+欲洁何曾洁，云空未必空。可怜金玉质，终陷淖泥中。后面忽见画着个恶狼，追扑
+一美女，欲啖之意。其书云：
+子系中山狼，得志便猖狂。
+金闺花柳质，一载赴黄粱。后面便是一所古庙，里面有一美人在内看经独坐。其判
+云：
+勘破三春景不长，缁衣顿改昔年妆。
+可怜绣户侯门女，独卧青灯古佛旁。后面便是一片冰山，上面有一只雌凤。其判曰
+：
+凡鸟偏从末世来，都知爱慕此生才。
+一从二令三人木，哭向金陵事更哀。后面又是一座荒村野店，有一美人在那里纺绩
+。其判云：
+势败休云贵，家亡莫论亲。
+偶因济刘氏，巧得遇恩人。后面又画着一盆茂兰，旁有一位凤冠霞帔的美人。也有
+判云：
+桃李春风结子完，到头谁似一盆兰。
+如冰水好空相妒，枉与他人作笑谈。后面又画着高楼大厦，有一美人悬梁自缢。其
+判云：
+情天情海幻情身，情既相逢必主淫。
+漫言不肖皆荣出，造衅开端实在宁。
+宝玉还欲看时，那仙姑知他天分高明，性情颖慧，恐把仙机泄漏，遂掩了卷册，笑
+向宝玉道：“且随我去游玩奇景，何必在此打这闷葫芦！”
+宝玉恍恍惚惚，不觉弃了卷册，又随了警幻来至后面。但见珠帘绣幕，画栋雕檐，
+说不尽那光摇朱户金铺地，雪照琼窗玉作宫。更见仙花馥郁，异草芬芳，真好个所
+在。又听警幻笑道：“你们快出来迎接贵客！”一语未了，只见房中又走出几个仙
+子来，皆是荷袂蹁跹，羽衣飘舞，姣若春花，媚如秋月。一见了宝玉，都怨谤警幻
+道：“我们不知系何‘贵客’，忙的接了出来！姐姐曾说今日今时必有绛珠妹子的
+生魂前来游玩，故我等久待。何故反引这浊物来污染这清净女儿之境？”
+宝玉听如此说，便吓得欲退不能退，果觉自形污秽不堪。警幻忙携住宝玉的手，向
+众姊妹道：“你等不知原委：今日原欲往荣府去接绛珠，适从宁府所过，偶遇宁荣
+二公之灵，嘱吾云：‘吾家自国朝定鼎以来，功名奕世，富贵传流，虽历百年，奈
+运终数尽，不可挽回者。故遗之子孙虽多，竟无可以继业。其中惟嫡孙宝玉一人，
+禀性乖张，生性怪谲，虽聪明灵慧，略可望成，无奈吾家运数合终，恐无人规引入
+正。幸仙姑偶来，万望先以情欲声色等事警其痴顽，或能使彼跳出迷人圈子，然后
+入于正路，亦吾兄弟之幸矣。’如此嘱吾，故发慈心，引彼至此。先以彼家上中下
+三等女子之终身册籍，令彼熟玩，尚未觉悟；故引彼再至此处，令其再历饮馔声色
+之幻，或冀将来一悟，亦未可知也。”
+说毕，携了宝玉入室。但闻一缕幽香，竟不知其所焚何物。宝玉遂不禁相问。警幻
+冷笑道：“此香尘世中既无，尔何能知！此香乃系诸名山胜境内初生异卉之精，合
+各种宝林珠树之油所制，名‘群芳髓’。”宝玉听了，自是羡慕而已。大家入座，
+小丫鬟捧上茶来。宝玉自觉清香异味，纯美非常，因又问何名。警幻道：“此茶出
+在放春山遣香洞，又以仙花灵叶上所带之宿露而烹，此茶名曰‘千红一窟’。”宝
+玉听了，点头称赏。因看房内，瑶琴、宝鼎、古画、新诗，无所不有，更喜窗下亦
+有唾绒，奁间时渍粉污。壁上也见悬着一副对联，书云：
+幽微灵秀地，无可奈何天。宝玉看毕，无不羡慕。因又请问众仙姑姓名：一名痴梦
+仙姑，一名钟情大士，一名引愁金女，一名度恨菩提，各各道号不一。少刻，有小
+丫鬟来调桌安椅，设摆酒馔。真是：琼浆满泛玻璃盏，玉液浓斟琥珀杯。更不用再
+说那肴馔之盛。宝玉因闻得此酒清香甘冽，异乎寻常，又不禁相问。警幻道：“此
+酒乃以百花之蕊，万木之汁，加以麟髓之醅，凤乳之曲酿成，因名为‘万艳同杯’
+。”宝玉称赏不迭。
+饮酒间，又有十二个舞女上来，请问演何词曲。警幻道：“就将新制《红楼梦》十
+二支演上来。”舞女们答应了，便轻敲檀板，款按银筝，听他歌道是：
+开辟鸿蒙……
+方歌了一句，警幻便说道：“此曲不比尘世中所填传奇之曲，必有生旦净末之则，
+又有南北九宫之限。此或咏叹一人，或感怀一事，偶成一曲，即可谱入管弦。若非
+个中人，不知其中之妙。料尔亦未必深明此调。若不先阅其稿，后听其歌，翻成嚼
+蜡矣。”说毕，回头命小丫鬟取了《红楼梦》原稿来，递与宝玉。宝玉接来，一面
+目视其文，一面耳聆其歌曰：
+〖红楼梦引子〗 开辟鸿蒙，谁为情种？都只为风月情浓。趁着这奈何天，伤怀日，
+寂寥时，试遣愚衷。因此上，演出这怀金悼玉的《红楼梦》。
+〖终身误〗 都道是金玉良姻，俺只念木石前盟。空对着，山中高士晶莹雪；终不忘
+，世外仙姝寂寞林。叹人间，美中不足今方信。纵然是齐眉举案，到底意难平。
+〖枉凝眉〗 一个是阆苑仙葩，一个是美玉无瑕。若说没奇缘，今生偏又遇着他，若
+说有奇缘，如何心事终虚化？一个枉自嗟呀，一个空劳牵挂。一个是水中月，一个
+是镜中花。想眼中能有多少泪珠儿，怎经得秋流到冬尽，春流到夏！
+宝玉听了此曲，散漫无稽，不见得好处，但其声韵凄惋，竟能销魂醉魄。因此也不
+察其原委，问其来历，就暂以此释闷而已。因又看下道：
+〖恨无常〗 喜荣华正好，恨无常又到。眼睁睁，把万事全抛。荡悠悠，把芳魂消耗
+。望家乡，路远山高。故向爹娘梦里相寻告：儿命已入黄泉，天伦呵，须要退步抽
+身早！
+〖分骨肉〗 一帆风雨路三千，把骨肉家园齐来抛闪。恐哭损残年，告爹娘，休把儿
+悬念。自古穷通皆有定，离合岂无缘？从今分两地，各自保平安。奴去也，莫牵连
+。
+〖乐中悲〗 襁褓中，父母叹双亡。纵居那绮罗丛，谁知娇养？幸生来，英豪阔大宽
+宏量，从未将儿女私情略萦心上。好一似，霁月光风耀玉堂。厮配得才貌仙郎，博
+得个地久天长，准折得幼年时坎坷形状。终久是云散高唐，水涸湘江。这是尘寰中
+消长数应当，何必枉悲伤！
+〖世难容〗 气质美如兰，才华阜比仙。天生成孤癖人皆罕。你道是啖肉食腥膻，视
+绮罗俗厌，却不知太高人愈妒，过洁世同嫌。可叹这，青灯古殿人将老，辜负了，
+红粉朱楼春色阑。到头来，依旧是风尘肮脏违心愿。好一似，无瑕白玉遭泥陷，又
+何须，王孙公子叹无缘。
+〖喜冤家〗 中山狼，无情兽，全不念当日根由。一味的骄奢淫荡贪还构。觑着那，
+侯门艳质同蒲柳，作践的，公府千金似下流。叹芳魂艳魄，一载荡悠悠。
+〖虚花悟〗 将那三春看破，桃红柳绿待如何？把这韶华打灭，觅那清淡天和。说什
+么，天上夭桃盛，云中杏蕊多。到头来，谁把秋捱过？则看那，白杨村里人呜咽，
+青枫林下鬼吟哦。更兼着，连天衰草遮坟墓。这的是，昨贫今富人劳碌，春荣秋谢
+花折磨。似这般，生关死劫谁能躲？闻说道，西方宝树唤婆娑，上结着长生果。
+〖聪明累〗 机关算尽太聪明，反算了卿卿性命。生前心已碎，死后性空灵。家富人
+宁，终有个家亡人散各奔腾。枉费了，意悬悬半世心；好一似，荡悠悠三更梦。忽
+喇喇似大厦倾，昏惨惨似灯将尽。呀！一场欢喜忽悲辛。叹人世，终难定！
+〖留余庆〗 留余庆，留余庆，忽遇恩人，幸娘亲，幸娘亲，积得阴功。劝人生，济
+困扶穷，休似俺那爱银钱忘骨肉的狠舅奸兄！正是乘除加减，上有苍穹。
+〖晚韶华〗 镜里恩情，更那堪梦里功名！那美韶华去之何迅！再休提绣帐鸳衾。只
+这带珠冠，披凤袄，也抵不了无常性命。虽说是，人生莫受老来贫，也须要阴骘积
+儿孙。气昂昂头戴簪缨；光灿灿胸悬金印；威赫赫爵禄高登，威赫赫爵禄高登；昏
+惨惨黄泉路近。问古来将相可还存？也只是虚名儿与后人钦敬。
+〖好事终〗 画梁春尽落香尘。擅风情，秉月貌，便是败家的根本。箕裘颓堕皆从敬
+，家事消亡首罪宁。宿孽总因情。
+〖收尾。飞鸟各投林〗 为官的，家业凋零；富贵的，金银散尽；有恩的，死里逃生
+；无情的，分明报应。欠命的，命已还；欠泪的，泪已尽。冤冤相报实非轻，分离
+聚合皆前定。欲知命短问前生，老来富贵也真侥幸。看破的，遁入空门；痴迷的，
+枉送了性命。好一似食尽鸟投林，落了片白茫茫大地真干净！
+歌毕，还要歌副曲。警幻见宝玉甚无趣味，因叹：“痴儿竟尚未悟！”那宝玉忙止
+歌姬不必再唱，自觉朦胧恍惚，告醉求卧。警幻便命撤去残席，送宝玉至一香闺绣
+阁之中，其间铺陈之盛，乃素所未见之物。更可骇者，早有一位女子在内，其鲜艳
+妩媚，有似乎宝钗，风流袅娜，则又如黛玉。正不知何意，忽警幻道：“尘世中多
+少富贵之家，那些绿窗风月，绣阁烟霞，皆被淫污纨绔与那些流荡女子悉皆玷辱。
+更可恨者，自古来多少轻薄浪子，皆以‘好色不淫’为饰，又以‘情而不淫’作案
+，此皆饰非掩丑之语也。好色即淫，知情更淫。是以巫山之会，云雨之欢，皆由既
+悦其色，复恋其情所致也。吾所爱汝者，乃天下古今第一淫人也。”
+宝玉听了，唬的忙答道：“仙姑差了。我因懒于读书，家父母尚每垂训饬，岂敢再
+冒‘淫’字。况且年纪尚小，不知‘淫’字为何物。”警幻道：“非也。淫虽一理
+，意则有别。如世之好淫者，不过悦容貌，喜歌舞，调笑无厌，云雨无时，恨不能
+尽天下之美女供我片时之趣兴，此皆皮肤淫滥之蠢物耳。如尔则天分中生成一段痴
+情，吾辈推之为‘意淫’。‘意淫’二字，惟心会而不可口传，可神通而不可语达
+。汝今独得此二字，在闺阁中，固可为良友；然于世道中未免迂阔怪诡，百口嘲谤
+，万目睚眦。今既遇令祖宁荣二公剖腹深嘱，吾不忍君独为我闺阁增光，见弃于世
+道，是以特引前来，醉以灵酒，沁以仙茗，警以妙曲，再将吾妹一人，乳名兼美字
+可卿者，许配于汝。今夕良时，即可成姻。不过令汝领略此仙闺幻境之风光尚如此
+，何况尘境之情景哉？而今后万万解释，改悟前情，留意于孔孟之间，委身于经济
+之道。”说毕便秘授以云雨之事，推宝玉入房，将门掩上自去。
+那宝玉恍恍惚惚，依警幻所嘱之言，未免有儿女之事，难以尽述。至次日，便柔情
+缱绻，软语温存，与可卿难解难分。因二人携手出去游顽之时，忽至一个所在，但
+见荆榛遍地，狼虎同群，迎面一道黑溪阻路，并无桥梁可通。正在犹豫之间，忽见
+警幻后面追来，告道：“快休前进，作速回头要紧！”宝玉忙止步问道：“此系何
+处？”警幻道：“此即迷津也。深有万丈，遥亘千里，中无舟楫可通，只有一个木
+筏，乃木居士掌舵，灰侍者撑篙，不受金银之谢，但遇有缘者渡之。尔今偶游至此
+，设如堕落其中，则深负我从前谆谆警戒之语矣。”话犹未了，只听迷津内水响如
+雷，竟有许多夜叉海鬼将宝玉拖将下去。吓得宝玉汗下如雨，一面失声喊叫：“可
+卿救我！”吓得袭人辈众丫鬟忙上来搂住，叫：“宝玉别怕，我们在这里！”
+却说秦氏正在房外嘱咐小丫头们好生看着猫儿狗儿打架，忽听宝玉在梦中唤他的小
+名，因纳闷道：“我的小名这里从没人知道的，他如何知道，在梦里叫出来？”正
+是：
+一场幽梦同谁近，千古情人独我痴。
+第六回
+贾宝玉初试云雨情 刘姥姥一进荣国府
+却说秦氏因听见宝玉从梦中唤他的乳名，心中自是纳闷，又不好细问。彼时宝玉迷
+迷惑惑，若有所失。众人忙端上桂圆汤来，呷了两口，遂起身整衣。袭人伸手与他
+系裤带时，不觉伸手至大腿处，只觉冰凉一片沾湿，唬的忙退出手来，问是怎么了
+。宝玉红涨了脸，把他的手一捻。袭人本是个聪明女子，年纪本又比宝玉大两岁，
+近来也渐通人事，今见宝玉如此光景，心中便觉察一半了，不觉也羞的红涨了脸面
+，不敢再问。仍旧理好衣裳，遂至贾母处来，胡乱吃毕了晚饭，过这边来。
+袭人忙趁众奶娘丫鬟不在旁时，另取出一件中衣来与宝玉换上。宝玉含羞央告道：
+“好姐姐，千万别告诉人。”袭人亦含羞笑问道：“你梦见什么故事了？是那里流
+出来的那些脏东西？”宝玉道：“一言难尽。”说着便把梦中之事细说与袭人听了
+。然后说至警幻所授云雨之情，羞的袭人掩面伏身而笑。宝玉亦素喜袭人柔媚娇俏
+，遂强袭人同领警幻所训云雨之事。袭人素知贾母已将自己与了宝玉的，今便如此
+，亦不为越礼，遂和宝玉偷试一番，幸得无人撞见。自此宝玉视袭人更比别个不同
+，袭人待宝玉更为尽心。暂且别无话说。
+按荣府中一宅人合算起来，人口虽不多，从上至下也有三四百丁；虽事不多，一天
+也有一二十件，竟如乱麻一般，并无个头绪可作纲领。正寻思从那一件事自那一个
+人写起方妙，恰好忽从千里之外，芥荳之微，小小一个人家，因与荣府略有些瓜葛
+，这日正往荣府中来，因此便就此一家说来，倒还是头绪。你道这一家姓甚名谁，
+又与荣府有甚瓜葛？且听细讲。
+方才所说的这小小之家，乃本地人氏，姓王，祖上曾作过小小的一个京官，昔年与
+凤姐之祖王夫人之父认识。因贪王家的势利，便连了宗认作侄儿。那时只有王夫人
+之大兄凤姐之父与王夫人随在京中的，知有此一门连宗之族，余者皆不认识。目今
+其祖已故，只有一个儿子，名唤王成，因家业萧条，仍搬出城外原乡中住去了。王
+成新近亦因病故，只有其子，小名狗儿。狗儿亦生一子，小名板儿，嫡妻刘氏，又
+生一女，名唤青儿。一家四口，仍以务农为业。因狗儿白日间又作些生计，刘氏又
+操井臼等事，青板姊妹两个无人看管，狗儿遂将岳母刘姥姥接来一处过活。这刘姥
+姥乃是个积年的老寡妇，膝下又无儿女，只靠两亩薄田度日。今者女婿接来养活，
+岂不愿意，遂一心一计，帮趁着女儿女婿过活起来。
+因这年秋尽冬初，天气冷将上来，家中冬事未办，狗儿未免心中烦虑，吃了几杯闷
+酒，在家闲寻气恼，刘氏也不敢顶撞。因此刘姥姥看不过，乃劝道：“姑爷，你别
+嗔着我多嘴。咱们村庄人，那一个不是老老诚诚的，守多大碗儿吃多大的饭。你皆
+因年小的时候，托着你那老家之福，吃喝惯了，如今所以把持不住。有了钱就顾头
+不顾尾，没了钱就瞎生气，成个什么男子汉大丈夫呢！如今咱们虽离城住着，终是
+天子脚下。这长安城中，遍地都是钱，只可惜没人会去拿去罢了。在家跳蹋会子也
+不中用。”狗儿听说，便急道：“你老只会炕头儿上混说，难道叫我打劫偷去不成
+？”刘姥姥道：“谁叫你偷去呢。也到底想法儿大家裁度，不然那银子钱自己跑到
+咱家来不成？”狗儿冷笑道：“有法儿还等到这会子呢。我又没有收税的亲戚，作
+官的朋友，有什么法子可想的？便有，也只怕他们未必来理我们呢！”
+刘姥姥道：“这倒不然。谋事在人，成事在天。咱们谋到了，看菩萨的保佑，有些
+机会，也未可知。我倒替你们想出一个机会来。当日你们原是和金陵王家连过宗的
+，二十年前，他们看承你们还好，如今自然是你们拉硬屎，不肯去亲近他，故疏远
+起来。想当初我和女儿还去过一遭。他们家的二小姐着实响快，会待人，倒不拿大
+。如今现是荣国府贾二老爷的夫人。听得说，如今上了年纪，越发怜贫恤老，最爱
+斋僧敬道，舍米舍钱的。如今王府虽升了边任，只怕这二姑太太还认得咱们。你何
+不去走动走动，或者他念旧，有些好处，也未可知。要是他发一点好心，拔一根寒
+毛比咱们的腰还粗呢。”刘氏一旁接口道：“你老虽说的是，但只你我这样个嘴脸
+，怎样好到他门上去的。先不先，他们那些门上的人也未必肯去通信。没的去打嘴
+现世。”
+谁知狗儿利名心最重，听如此一说，心下便有些活动起来。又听他妻子这话，便笑
+接道：“姥姥既如此说，况且当年你又见过这姑太太一次，何不你老人家明日就走
+一趟，先试试风头再说。”刘姥姥道：“嗳哟哟！可是说的，‘侯门深似海’，我
+是个什么东西，他家人又不认得我，我去了也是白去的。”狗儿笑道：“不妨，我
+教你老人家一个法子：你竟带了外孙子板儿，先去找陪房周瑞，若见了他，就有些
+意思了。这周瑞先时曾和我父亲交过一件事，我们极好的。”刘姥姥道：“我也知
+道他的。只是许多时不走动，知道他如今是怎样。这也说不得了，你又是个男人，
+又这样个嘴脸，自然去不得，我们姑娘年轻媳妇子，也难卖头卖脚的，倒还是舍着
+我这付老脸去碰一碰。果然有些好处，大家都有益；便是没银子来，我也到那公府
+侯门见一见世面，也不枉我一生。”说毕，大家笑了一回。当晚计议已定。
+次日天未明，刘姥姥便起来梳洗了，又将板儿教训了几句。那板儿才五六岁的孩子
+，一无所知，听见刘姥姥带他进城逛去，便喜的无不应承。于是刘姥姥带他进城，
+找至宁荣街。来至荣府大门石狮子前，只见簇簇轿马，刘姥姥便不敢过去，且掸了
+掸衣服，又教了板儿几句话，然后蹭到角门前。只见几个挺胸叠肚指手画脚的人，
+坐在大板凳上，说东谈西呢。刘姥姥只得蹭上来问：“太爷们纳福。”众人打量了
+他一会，便问“那里来的？”刘姥姥陪笑道：“我找太太的陪房周大爷的，烦那位
+太爷替我请他老出来。”那些人听了，都不瞅睬，半日方说道：“你远远的在那墙
+角下等着，一会子他们家有人就出来的。”内中有一老年人说道：“不要误他的事
+，何苦耍他。”因向刘姥姥道：“那周大爷已往南边去了。他在后一带住着，他娘
+子却在家。你要找时，从这边绕到后街上后门上去问就是了。”
+刘姥姥听了谢过，遂携了板儿，绕到后门上。只见门前歇着些生意担子，也有卖吃
+的，也有卖顽耍物件的，闹吵吵三二十个小孩子在那里厮闹。刘姥姥便拉住一个道
+：“我问哥儿一声，有个周大娘可在家么？”孩子们道：“那个周大娘？我们这里
+周大娘有三个呢，还有两个周奶奶，不知是那一行当的？”刘姥姥道：“是太太的
+陪房周瑞。”孩子道：“这个容易，你跟我来。”说着，跳蹿蹿的引着刘姥姥进了
+后门，至一院墙边，指与刘姥姥道：“这就是他家。”又叫道：“周大娘，有个老
+奶奶来找你呢，我带了来了。”
+周瑞家的在内听说，忙迎了出来，问：“是那位？”刘姥姥忙迎上来问道：“好呀
+，周嫂子！”周瑞家的认了半日，方笑道：“刘姥姥，你好呀！你说说，能几年，
+我就忘了。请家里来坐罢。”刘姥姥一壁里走着，一壁笑说道：“你老是贵人多忘
+事，那里还记得我们呢。”说着，来至房中。周瑞家的命雇的小丫头倒上茶来吃着
+。周瑞家的又问板儿道：“你都长这们大了！”又问些别后闲话。又问刘姥姥：“
+今日还是路过，还是特来的？”刘姥姥便说：“原是特来瞧瞧嫂子你，二则也请请
+姑太太的安。若可以领我见一见更好，若不能，便借重嫂子转致意罢了。”
+周瑞家的听了，便已猜着几分来意。只因昔年他丈夫周瑞争买田地一事，其中多得
+狗儿之力，今见刘姥姥如此而来，心中难却其意，二则也要显弄自己的体面。听如
+此说，便笑说道：“姥姥你放心。大远的诚心诚意来了，岂有个不教你见个真佛去
+的呢。论理，人来客至回话，却不与我相干。我们这里都是各占一样儿：我们男的
+只管春秋两季地租子，闲时只带着小爷们出门子就完了，我只管跟太太奶奶们出门
+的事。皆因你原是太太的亲戚，又拿我当个人，投奔了我来，我就破个例，给你通
+个信去。但只一件，姥姥有所不知，我们这里又不比五年前了。如今太太竟不大管
+事，都是琏二奶奶管家了。你道这琏二奶奶是谁？就是太太的内侄女，当日大舅老
+爷的女儿，小名凤哥的。”刘姥姥听了，罕问道：“原来是他！怪道呢，我当日就
+说他不错呢。这等说来，我今儿还得见他了。”周瑞家的道：“这自然的。如今太
+太事多心烦，有客来了，略可推得去的就推过去了，都是凤姑娘周旋迎待。今儿宁
+可不会太太，倒要见他一面，才不枉这里来一遭。”刘姥姥道：“阿弥陀佛！全仗
+嫂子方便了。”周瑞家的道：“说那里话。俗语说的：‘与人方便，自己方便。’
+不过用我说一句话罢了，害着我什么。”说着，便叫小丫头到倒厅上悄悄的打听打
+听，老太太屋里摆了饭了没有。小丫头去了。这里二人又说些闲话。
+刘姥姥因说：“这凤姑娘今年大还不过二十岁罢了，就这等有本事，当这样的家，
+可是难得的。”周瑞家的听了道：“我的姥姥，告诉不得你呢。这位凤姑娘年纪虽
+小，行事却比世人都大呢。如今出挑的美人一样的模样儿，少说些有一万个心眼子
+。再要赌口齿，十个会说话的男人也说他不过。回来你见了就信了。就只一件，待
+下人未免太严些个。”说着，只见小丫头回来说：“老太太屋里已摆完了饭了，二
+奶奶在太太屋里呢。”周瑞家的听了，连忙起身，催着刘姥姥说：“快走，快走。
+这一下来他吃饭是个空子，咱们先赶着去。若迟一步，回事的人也多了，难说话。
+再歇了中觉，越发没了时候了。”说着一齐下了炕，打扫打扫衣服，又教了板儿几
+句话，随着周瑞家的，逶迤往贾琏的住处来。
+先到了倒厅，周瑞家的将刘姥姥安插在那里略等一等。自己先过了影壁，进了院门
+，知凤姐未下来，先找着凤姐的一个心腹通房大丫头名唤平儿的。周瑞家的先将刘
+姥姥起初来历说明，又说：“今日大远的特来请安。当日太太是常会的，今日不可
+不见，所以我带了他进来了。等奶奶下来，我细细回明，奶奶想也不责备我莽撞的
+。”平儿听了，便作了主意：“叫他们进来，先在这里坐着就是了。”周瑞家的听
+了，方出去引他两个进入院来。上了正房台矶，小丫头打起猩红毡帘，才入堂屋，
+只闻一阵香扑了脸来，竟不辨是何气味，身子如在云端里一般。满屋中之物都耀眼
+争光的，使人头悬目眩。刘姥姥此时惟点头咂嘴念佛而已。于是来至东边这间屋内
+，乃是贾琏的女儿大姐儿睡觉之所。平儿站在炕沿边，打量了刘姥姥两眼，只得问
+个好让坐。刘姥姥见平儿遍身绫罗，插金带银，花容玉貌的，便当是凤姐儿了。才
+要称姑奶奶，忽见周瑞家的称他是平姑娘，又见平儿赶着周瑞家的称周大娘，方知
+不过是个有些体面的丫头了。于是让刘姥姥和板儿上了炕，平儿和周瑞家的对面坐
+在炕沿上，小丫头子斟了茶来吃茶。
+刘姥姥只听见咯当咯当的响声，大有似乎打箩柜筛面的一般，不免东瞧西望的。忽
+见堂屋中柱子上挂着一个匣子，底下又坠着一个秤砣般一物，却不住的乱幌。刘姥
+姥心中想着：“这是什么爱物儿？有甚用呢？”正呆时，只听得当的一声，又若金
+钟铜磬一般，不防倒唬的一展眼。接着又是一连八九下。方欲问时，只见小丫头子
+们齐乱跑，说：“奶奶下来了。”周瑞家的与平儿忙起身，命刘姥姥“只管等着，
+是时候我们来请你。”说着，都迎出去了。
+刘姥姥屏声侧耳默候。只听远远有人笑声，约有一二十妇人，衣裙窸窣，渐入堂屋
+，往那边屋内去了。又见两三个妇人，都捧着大漆捧盒，进这边来等候。听得那边
+说了声“摆饭”，渐渐的人才散出，只有伺候端菜的几个人。半日鸦雀不闻之后，
+忽见二人抬了一张炕桌来，放在这边炕上，桌上碗盘森列，仍是满满的鱼肉在内，
+不过略动了几样。板儿一见了，便吵着要肉吃，刘姥姥一巴掌打了他去。忽见周瑞
+家的笑嘻嘻走过来，招手儿叫他。刘姥姥会意，于是带了板儿下炕，至堂屋中，周
+瑞家的又和他唧咕了一会，方过这边屋里来。
+只见门外錾铜钩上悬着大红撒花软帘，南窗下是炕，炕上大红毡条，靠东边板壁立
+着一个锁子锦靠背与一个引枕，铺着金心绿闪缎大坐褥，旁边有雕漆痰盒。那凤姐
+儿家常带着秋板貂鼠昭君套，围着攒珠勒子，穿着桃红撒花袄，石青刻丝灰鼠披风
+，大红洋绉银鼠皮裙，粉光脂艳，端端正正坐在那里，手内拿着小铜火箸儿拨手炉
+内的灰。平儿站在炕沿边，捧着小小的一个填漆茶盘，盘内一个小盖钟。凤姐也不
+接茶，也不抬头，只管拨手炉内的灰，慢慢的问道：“怎么还不请进来？”一面说
+，一面抬身要茶时，只见周瑞家的已带了两个人在地下站着呢。这才忙欲起身，犹
+未起身时，满面春风的问好，又嗔着周瑞家的怎么不早说。刘姥姥在地下已是拜了
+数拜，问姑奶奶安。凤姐忙说：“周姐姐，快搀起来，别拜罢，请坐。我年轻，不
+大认得，可也不知是什么辈数，不敢称呼。”周瑞家的忙回道：“这就是我才回的
+那姥姥了。”凤姐点头。刘姥姥已在炕沿上坐了。板儿便躲在背后，百般的哄他出
+来作揖，他死也不肯。
+凤姐儿笑道：“亲戚们不大走动，都疏远了。知道的呢，说你们弃厌我们，不肯常
+来，不知道的那起小人，还只当我们眼里没人似的。”刘姥姥忙念佛道：“我们家
+道艰难，走不起，来了这里，没的给姑奶奶打嘴，就是管家爷们看着也不像。”凤
+姐儿笑道：“这话没的叫人恶心。不过借赖着祖父虚名，作了穷官儿，谁家有什么
+，不过是个旧日的空架子。俗语说，‘朝廷还有三门子穷亲戚’呢，何况你我。”
+说着，又问周瑞家的回了太太了没有。周瑞家的道：“如今等奶奶的示下。”凤姐
+道：“你去瞧瞧，要是有人有事就罢，得闲儿呢就回，看怎么说。”周瑞家的答应
+着去了。
+这里凤姐叫人抓些果子与板儿吃，刚问些闲话时，就有家下许多媳妇管事的来回话
+。平儿回了，凤姐道：“我这里陪客呢，晚上再来回。若有很要紧的，你就带进来
+现办。”平儿出去了，一会进来说：“我都问了，没什么紧事，我就叫他们散了。
+”凤姐点头。只见周瑞家的回来，向凤姐道：“太太说了，今日不得闲，二奶奶陪
+着便是一样。多谢费心想着。白来逛逛呢便罢，若有甚说的，只管告诉二奶奶，都
+是一样。”刘姥姥道：“也没甚说的，不过是来瞧瞧姑太太，姑奶奶，也是亲戚们
+的情分。”周瑞家的道：“没甚说的便罢，若有话，只管回二奶奶，是和太太一样
+的。”一面说，一面递眼色与刘姥姥。刘姥姥会意，未语先飞红的脸，欲待不说，
+今日又所为何来？只得忍耻说道：“论理今儿初次见姑奶奶，却不该说，只是大远
+的奔了你老这里来，也少不的说了。”刚说到这里，只听二门上小厮们回说：“东
+府里的小大爷进来了。”凤姐忙止刘姥姥：“不必说了。”一面便问：“你蓉大爷
+在那里呢？”只听一路靴子脚响，进来了一个十七八岁的少年，面目清秀，身材俊
+俏，轻裘宝带，美服华冠。刘姥姥此时坐不是，立不是，藏没处藏。凤姐笑道：“
+你只管坐着，这是我侄儿。”刘姥姥方扭扭捏捏在炕沿上坐了。
+贾蓉笑道：“我父亲打发我来求婶子，说上回老舅太太给婶子的那架玻璃炕屏，明
+日请一个要紧的客，借了略摆一摆就送过来。”凤姐道：“说迟了一日，昨儿已经
+给了人了。”贾蓉听着，嘻嘻的笑着，在炕沿上半跪道：“婶子若不借，又说我不
+会说话了，又挨一顿好打呢。婶子只当可怜侄儿罢。”凤姐笑道：“也没见你们，
+王家的东西都是好的不成？你们那里放着那些好东西，只是看不见，偏我的就是好
+的。”贾蓉笑道：“那里有这个好呢！只求开恩罢。”凤姐道：“若碰一点儿，你
+可仔细你的皮！”因命平儿拿了楼房的钥匙，传几个妥当人抬去。贾蓉喜的眉开眼
+笑，说：“我亲自带了人拿去，别由他们乱碰。”说着便起身出去了。
 
 
 
